Progress towards Sakai-11